src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether or not this account is active for Quickbooks billing purposes.</description>
        <inlineHelpText>Indicates whether or not this account is active for Quickbooks billing purposes.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <picklist>
            <picklistValues>
                <fullName>Lawyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Office Holder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address_County__c</fullName>
        <description>The county, or the largest administrative division of a U.S. state, portion of the billing address.</description>
        <inlineHelpText>The county, or the largest administrative division of a U.S. state, portion of the billing address.</inlineHelpText>
        <label>Billing Address County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_YTD_Gifts__c</fullName>
        <inlineHelpText>Calendar Year To Date (YTD) Gifts. Not Fiscal Year.</inlineHelpText>
        <label>Calendar YTD Gifts</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Development, Membership, Grant</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Posted, Grant Awarded, Received, Closed Won, Yes, Accepted, Attended, Imported, Not Posted, Paypal Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <inlineHelpText>Congressional district based on the address of the school.</inlineHelpText>
        <label>Congressional District</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Gift_Summary__c</fullName>
        <description>Sum of all of closed/won gifts since X date. Date must be set in Setup-&gt;Customize-&gt;Accounts-&gt;Fields before running report. After changing date, allow time for field to be calculated on all accounts (potentially 10+ minutes?)</description>
        <inlineHelpText>Sum of all of closed/won gifts since X date. Date must be set in Setup-&gt;Customize-&gt;Accounts-&gt;Fields before running report. After changing date, allow time for field to be calculated on all accounts (potentially 10+ minutes?)</inlineHelpText>
        <label>Custom Gift Summary</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Development, Grant, Membership</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Posted, Grant Awarded, Received, Closed Won, Yes, Accepted, Attended</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>1/1/2011 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DataLoaderID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoaderID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Free_Reduced_Lunch__c</fullName>
        <inlineHelpText>Percentage of students at school who are eligible for free or reduced cost lunch. Format: xx.y (percent sign not entered).</inlineHelpText>
        <label>% Free/Reduced Lunch</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_Gift_Amount__c</fullName>
        <description>Requested by Carrie Schartenberg, implemented by Christopher Smith</description>
        <inlineHelpText>Highest gift for all years.  NOTE: includes even not posted, pledged, and imported values.</inlineHelpText>
        <label>Highest Gift Amount (Development)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Development, Membership, Grant</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Not Posted, Posted, Grant Awarded, Received, Closed Won, Yes, Accepted, Attended, Imported, Paypal Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JSA_State__c</fullName>
        <description>Two character abbreviation of the JSA State (based on the Zone, which is based on ZIP code).</description>
        <formula>LEFT( Zone__c , 2)</formula>
        <inlineHelpText>Two character abbreviation of the JSA State (based on the Zone, which is based on ZIP code).</inlineHelpText>
        <label>JSA State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSF_Current_Balance__c</fullName>
        <description>The current AR balance of this account .</description>
        <inlineHelpText>The current AR balance of this account.</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JSF_QB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this account is in the QuickBooks.</description>
        <inlineHelpText>Indicates whether or not this account is in the QuickBooks.</inlineHelpText>
        <label>QuickBooks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Date__c</fullName>
        <label>Last Gift Date (Development)</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Development, Grant, Membership</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Not Posted,Posted, Grant Awarded, Received, Closed Won, Yes, Accepted, Attended, Imported, Paypal Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Tax_Payment_Date__c</fullName>
        <inlineHelpText>Used in reports to see if taxes have been paid during the current school year.  Update this field and the Total field each time you receive taxes from a chapter.</inlineHelpText>
        <label>Last Tax Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifetime_Contributions_Other__c</fullName>
        <description>Lifetime payments from non-development opportunities (summer programs or school year programs).</description>
        <inlineHelpText>Lifetime payments from non-development opportunities (summer programs or school year programs) since we started using Salesforce in 2009.</inlineHelpText>
        <label>Lifetime Payments (Other)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Chapter Convention Registration, Conference, Individual Convention Registration, Summer School Registration, Symposium Registration, Historical Import Summer Programs</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Posted, Closed Won, Yes, Accepted, Attended, Not Posted, Imported, Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lifetime_Contributions__c</fullName>
        <inlineHelpText>Sum of the Amounts on all Won Opportunities associated with the Account (only development oppties), since we started using Salesforce in 2009. Note: This field, and all other gift/contribution fields, DO NOT INCLUDE PLEDGES.</inlineHelpText>
        <label>Lifetime Contributions (Dev)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Development, Membership, Grant</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Posted, Grant Awarded, Received, Closed Won, Accepted, Attended, Imported, Not Posted, Yes, Paypal Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Prospect__c</fullName>
        <inlineHelpText>Designates whether or not a donor is a major prospect or not, is being stewarded or not and growth potential.</inlineHelpText>
        <label>Major Donor Prospect</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Steward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD Growth - Steward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect - Steward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Map_del__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b40000000xTUp&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01540000000E0ti&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetForum_Additional_Data__c</fullName>
        <description>Data from the old NetForum database that did not have a specific home in Salesforce.  This included thing like extra address, phones, faxes, and etc,</description>
        <inlineHelpText>Data from the old NetForum database that did not have a specific home in Salesforce.  This included thing like extra address, phones, faxes, and etc,</inlineHelpText>
        <label>NetForum Additional Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NetForum_Key__c</fullName>
        <description>The unique identifier/key this account had as a customer in NetForum.</description>
        <inlineHelpText>The unique identifier/key this account had as a customer in NetForum.</inlineHelpText>
        <label>NetForum Key</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>Number of students for a high school</description>
        <label># of Students</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Under_represe__c</fullName>
        <inlineHelpText>The percentage of students who are from underrepresented minority groups. Format: xx.y (percent sign not entered). Underrepresented minorities includes African Americans, Hispanics, and Native Americans.</inlineHelpText>
        <label>% Underrep. Minority</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QB_JSF_CUSTOMER_LIST_ID__c</fullName>
        <description>This is the ID of this account as a customer in the QuickBooks.</description>
        <inlineHelpText>This is the ID of this account as a customer in the QuickBooks.</inlineHelpText>
        <label>QuickBooks Customer List ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Customer_Billing_Name__c</fullName>
        <description>The short form of the account name that is the customer billing name field in QuickBooks.  This is the customer name that appears on all transactions, such as, sales orders and invoices.</description>
        <inlineHelpText>The short form of the account name that is the customer billing name field in QuickBooks.  This is the customer name that appears on all transactions, such as, sales orders and invoices.</inlineHelpText>
        <label>QuickBooks Customer Billing Name</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Customer_ID__c</fullName>
        <description>The short form of the account name that is the customer ID field in QuickBooks.  This is the name that shows in the QuickBooks customer list as the customer name.</description>
        <inlineHelpText>The short form of the account name that is the customer ID field in QuickBooks.  This is the name that shows in the QuickBooks customer list as the customer name.</inlineHelpText>
        <label>QuickBooks Customer ID</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RapLeaf__RapLeafInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RapLeafInfo</label>
        <referenceTo>RapLeaf__RapLeafInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solicitor_Including_Self__c</fullName>
        <formula>IF(Solicitor__c&lt;&gt;&quot;&quot;,  Solicitor__r.Name , Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Substitutes name of Account if Solicitor field is blank.</inlineHelpText>
        <label>Solicitor (Including Self)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor_Type__c</fullName>
        <formula>CASE( Solicitor__r.Type, 
            &quot;Director&quot;, &quot;Director&quot;, 
            &quot;Trustee&quot;, &quot;Trustee&quot;,
            &quot;Household (Non-board)&quot;, &quot;Household (Non-board)&quot;,
            &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Type field on the Account for the Solicitor</inlineHelpText>
        <label>Solicitor Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Account of person who solicited donation(s) from this individual or organization, if there is one.</inlineHelpText>
        <label>Solicitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solicitees</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <formula>if(BillingState=&apos;Alabama&apos;,&apos;AL&apos;,
if(BillingState=&apos;Alaska&apos;,&apos;AK&apos;,
if(BillingState=&apos;Arizona&apos;,&apos;AZ&apos;,
if(BillingState=&apos;Arkansas&apos;,&apos;AR&apos;,
if(BillingState=&apos;California&apos;,&apos;CA&apos;,
if(BillingState=&apos;Colorado&apos;,&apos;CO&apos;,
if(BillingState=&apos;Connecticut&apos;,&apos;CT&apos;,
if(BillingState=&apos;Delaware&apos;,&apos;DE&apos;,
if(BillingState=&apos;DistrictofColumbia&apos;,&apos;DC&apos;,
if(BillingState=&apos;Florida&apos;,&apos;FL&apos;,
if(BillingState=&apos;Georgia&apos;,&apos;GA&apos;,
if(BillingState=&apos;Guam&apos;,&apos;GU&apos;,
if(BillingState=&apos;Hawaii&apos;,&apos;HI&apos;,
if(BillingState=&apos;Idaho&apos;,&apos;ID&apos;,
if(BillingState=&apos;Illinois&apos;,&apos;IL&apos;,
if(BillingState=&apos;Indiana&apos;,&apos;IN&apos;,
if(BillingState=&apos;Iowa&apos;,&apos;IA&apos;,
if(BillingState=&apos;Kansas&apos;,&apos;KS&apos;,
if(BillingState=&apos;Kentucky&apos;,&apos;KY&apos;,
if(BillingState=&apos;Louisiana&apos;,&apos;LA&apos;,
if(BillingState=&apos;Maine&apos;,&apos;ME&apos;,
if(BillingState=&apos;MarshallIslands&apos;,&apos;MH&apos;,
if(BillingState=&apos;Maryland&apos;,&apos;MD&apos;,
if(BillingState=&apos;Massachusetts&apos;,&apos;MA&apos;,
if(BillingState=&apos;Michigan&apos;,&apos;MI&apos;,
if(BillingState=&apos;Minnesota&apos;,&apos;MN&apos;,
if(BillingState=&apos;Mississippi&apos;,&apos;MS&apos;,
if(BillingState=&apos;Missouri&apos;,&apos;MO&apos;,
if(BillingState=&apos;Montana&apos;,&apos;MT&apos;,
if(BillingState=&apos;Nebraska&apos;,&apos;NE&apos;,
if(BillingState=&apos;Nevada&apos;,&apos;NV&apos;,
if(BillingState=&apos;NewHampshire&apos;,&apos;NH&apos;,
if(BillingState=&apos;NewJersey&apos;,&apos;NJ&apos;,
if(BillingState=&apos;NewMexico&apos;,&apos;NM&apos;,
if(BillingState=&apos;NewYork&apos;,&apos;NY&apos;,
if(BillingState=&apos;NorthCarolina&apos;,&apos;NC&apos;,
if(BillingState=&apos;NorthDakota&apos;,&apos;ND&apos;,
if(BillingState=&apos;Ohio&apos;,&apos;OH&apos;,
if(BillingState=&apos;Oklahoma&apos;,&apos;OK&apos;,
if(BillingState=&apos;Oregon&apos;,&apos;OR&apos;,
if(BillingState=&apos;Palau&apos;,&apos;PW&apos;,
if(BillingState=&apos;Pennsylvania&apos;,&apos;PA&apos;,
if(BillingState=&apos;PuertoRico&apos;,&apos;PR&apos;,
if(BillingState=&apos;RhodeIsland&apos;,&apos;RI&apos;,
if(BillingState=&apos;SouthCarolina&apos;,&apos;SC&apos;,
if(BillingState=&apos;SouthDakota&apos;,&apos;SD&apos;,
if(BillingState=&apos;Tennessee&apos;,&apos;TN&apos;,
if(BillingState=&apos;Texas&apos;,&apos;TX&apos;,
if(BillingState=&apos;Utah&apos;,&apos;UT&apos;,
if(BillingState=&apos;Vermont&apos;,&apos;VT&apos;,
if(BillingState=&apos;Virginia&apos;,&apos;VA&apos;,
if(BillingState=&apos;Washington&apos;,&apos;WA&apos;,
if(BillingState=&apos;WestVirginia&apos;,&apos;WV&apos;,
if(BillingState=&apos;Wisconsin&apos;,&apos;WI&apos;,
if(BillingState=&apos;Wyoming&apos;,&apos;WY&apos;, &apos;&apos; )))))))))))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Steward</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Steward List</relationshipLabel>
        <relationshipName>Steward</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid_This_Year__c</fullName>
        <inlineHelpText>Running total of taxes paid during the school year. For the first payment received during the year, enter the total amount received.  If additional taxes are received during the year, enter the sum of all amounts received to date.</inlineHelpText>
        <label>Taxes Paid This Year</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>US_States__c</fullName>
        <label>US States</label>
        <picklist>
            <controllingField>Countries__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urban_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urban Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2004_05_FY_Gifts__c</fullName>
        <description>Total of all development opportunities in the 2004-05 fiscal year. This is a static figure and will not change if opportunities in this FY are adjusted.</description>
        <inlineHelpText>Total of all development opportunities in the 2004-05 fiscal year. This is a static figure and will not change if opportunities in this FY are adjusted.</inlineHelpText>
        <label>2004-05 FY Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2005_06_FY_Gifts__c</fullName>
        <description>Total of all development opportunities in the 2005-06 fiscal year. This is a static figure and will not change if opportunities in this FY are adjusted.</description>
        <inlineHelpText>Total of all development opportunities in the 2005-06 fiscal year. This is a static figure and will not change if opportunities in this FY are adjusted.</inlineHelpText>
        <label>2005-06 FY Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2006_07_FY_Gifts__c</fullName>
        <description>Total of all development opportunities in the 2006-07 fiscal year. This is a static figure and will not change if opportunities in this FY are adjusted.</description>
        <inlineHelpText>Total of all development opportunities in the 2006-07 fiscal year. This is a static figure and will not change if opportunities in this FY are adjusted.</inlineHelpText>
        <label>2006-07 FY Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2009_10_Taxes__c</fullName>
        <description>Total taxes collected during the 2009 - 2010 school year.</description>
        <inlineHelpText>Historical record of taxes (do not edit manually).</inlineHelpText>
        <label>2009-10 Taxes</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2010_11_Taxes__c</fullName>
        <inlineHelpText>Taxes paid by the chapter during the 2010-11 school year.  DO NOT EDIT this amount.</inlineHelpText>
        <label>2010-11 Taxes</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2011_12_Taxes__c</fullName>
        <inlineHelpText>Historical record of taxes (do not edit manually).</inlineHelpText>
        <label>2011-12 Taxes</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Six character (including dash) field that indicates JSA State and sub-jurisdiction of the school.</description>
        <inlineHelpText>Six character (including dash) field that indicates JSA State and sub-jurisdiction of the school.</inlineHelpText>
        <label>Zone</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Convert_To_Person_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PaymentConnect checks this box when auto-creating a Contact and an &apos;Individual Account&apos; that should be converted to a PersonAccount using a batch converter.</inlineHelpText>
        <label>Convert To Person Account</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllGovernment</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Government</value>
        </filters>
        <label>All Government</label>
    </listViews>
    <listViews>
        <fullName>AllNonprofits</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Nonprofit</value>
        </filters>
        <label>All Nonprofits</label>
    </listViews>
    <listViews>
        <fullName>AllOrganizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business,Account.Nonprofit,Account.Government</value>
        </filters>
        <label>All Organizations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <label>Businesses</label>
    </listViews>
    <listViews>
        <fullName>HighSchools</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HighSchool</value>
        </filters>
        <label>High Schools</label>
    </listViews>
    <listViews>
        <fullName>Universities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.University</value>
        </filters>
        <label>Universities</label>
    </listViews>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Use this record type for corporations or small businesses</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>BusinessAccount</fullName>
        <active>true</active>
        <description>ONLY FOR USE BY SALESFORCE FOR PERSON ACCOUNTS</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational</fullName>
        <active>true</active>
        <description>Use this record type for organizations that are involved with education aside from schools and universities; educational consultancy</description>
        <label>Educational</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <description>Use this record type for foundation entities</description>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>Use this record type for government agencies (federal, local or state)</description>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>HighSchool</fullName>
        <active>true</active>
        <description>Use this record type for High Schools (including chapters) (Grades 9-12 or 10-12)</description>
        <label>High School</label>
    </recordTypes>
    <recordTypes>
        <fullName>History</fullName>
        <active>true</active>
        <description>Only used for historical NetForum opportunities where the account could not be derived.</description>
        <label>History</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>Use this record type for hotels.</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>Represents a family, such as siblings and parents or guardians</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>Represents a single contact record</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Law_Firm</fullName>
        <active>true</active>
        <description>Use this record type for law firms.</description>
        <label>Law Firm</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media</fullName>
        <active>true</active>
        <description>Use this record type for TV/Radio/Newspaper/Internet organizations.</description>
        <label>Media</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nonprofit</fullName>
        <active>true</active>
        <description>Use this record type for nonprofit entities</description>
        <label>Nonprofit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Use this record type for any organization that does not fit any of the other record types.</description>
        <label>Other</label>
    </recordTypes>
</CustomObject>